--- a/src/index.hbs
+++ b/src/index.hbs
@@ -105,14 +105,13 @@
           <img src="/pict/etheriumlogo.png" alt="ethereum">
         </div>
         <div class="ccp__cardsethereuminfo">
-
           <div class="ccp__cardsethereumprice">
-            <span>Bitcoin</span>
-            <span><sub>$</sub> 11,354.00</span>
+            <span>Ethereum</span>
+            <span><sub>$</sub> 928.99</span>
           </div>
           <div class="ccp__cardsethereumgain">
-            <span>BTC/USD</span>
-            <span>-1.04%</span>
+            <span>ETH/USD</span>
+            <span>+0.98%</span>
           </div>
           <div class="ccp__cardsethereumgrapf">
 
@@ -123,13 +122,79 @@
             <button>Week</button>
             <button>Month</button>            
           </div>
-
+        </div>
+        <div class="ccp__cardsethereumfooter">
+          <div class="ccp__cardsethereumvolume">
+            <span>24h Volume</span>
+            <span>$ 11.12B</span>
+          </div>
         </div>
       </div>
 
 
-      <div class="ccp__cardsripple"></div>
-      <div class="ccp__cardscardano"></div>
+      <div class="ccp__cardsripple">
+        <div class="ccp__cardsripplelogo">
+          <img src="/pict/ripplelogo.png" alt="ripple">
+        </div>
+        <div class="ccp__cardsrippleinfo">
+          <div class="ccp__cardsrippleprice">
+            <span>Ripple</span>
+            <span><sub>$</sub> 1.37</span>
+          </div>
+          <div class="ccp__cardsripplegain">
+            <span>XRP/USD</span>
+            <span>+18.37%</span>
+          </div>
+          <div class="ccp__cardsripplegrapf">
+
+          </div>
+          <div class="ccp__cardsrippletimestapm">
+            <button>Hour</button>
+            <button>Day</button>
+            <button>Week</button>
+            <button>Month</button>            
+          </div>
+        </div>
+        <div class="ccp__cardsripplefooter">
+          <div class="ccp__cardsripplevolume">
+            <span>24h Volume</span>
+            <span>$ 981.19M</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="ccp__cardscardano">
+        <div class="ccp__cardscardanologo">
+          <img src="/pict/cardanologo.png" alt="cardano">
+        </div>
+        <div class="ccp__cardscardanoinfo">
+          <div class="ccp__cardscardanoprice">
+            <span>Cardano</span>
+            <span><sub>$</sub> 0.985964</span>
+          </div>
+          <div class="ccp__cardsbitcoingain">
+            <span>ADA/USD</span>
+            <span>+9.38%</span>
+          </div>
+          <div class="ccp__cardscardanograpf">
+
+          </div>
+          <div class="ccp__cardscardanotimestapm">
+            <button>Hour</button>
+            <button>Day</button>
+            <button>Week</button>
+            <button>Month</button>            
+          </div>
+        </div>
+        <div class="ccp__cardscardanofooter">
+          <div class="ccp__cardscardanovolume">
+            <span>24h Volume</span>
+            <span>$ 8.91B</span>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </div>
 </section>
