--- a/src/less/var.less
+++ b/src/less/var.less
@@ -4,4 +4,5 @@
 @colordarkblue: #292a3c;
 @colorverydarkblue: #272637;
 @colorbluegray: #3a3a52;
+@colorgreen: #5ed557;
 @transition: ease-in-out 0.5s;
