--- a/src/less/var.less
+++ b/src/less/var.less
@@ -4,5 +4,5 @@
 @colordarkblue: #292a3c;
 @colorverydarkblue: #272637;
 @colorbluegray: #3a3a52;
-@colorgreen: #5ed557;
+@colorgreen: #5da261;
 @transition: ease-in-out 0.5s;
