--- a/views/index.hbs
+++ b/views/index.hbs
@@ -172,7 +172,7 @@
             <span>Cardano</span>
             <span><sub>$</sub> 0.985964</span>
           </div>
-          <div class="ccp__cardsbitcoingain">
+          <div class="ccp__cardscardanogain">
             <span>ADA/USD</span>
             <span>+9.38%</span>
           </div>
