--- a/src/less/style.less
+++ b/src/less/style.less
@@ -27,7 +27,7 @@
     position: relative;
     top: 30px;
     height: 70px;
-    width: 70px;
+    width: 65px;
   }
 }
 
@@ -123,7 +123,15 @@
   }
 }
 
+.mixinburgerline {
+  border: 2px solid white;
+  align-self: center;
+  margin: 5px 0;  
+  width: 80%;
+}
+
 // MIXINS BLOCK END
+
 
 // SECTION SMART START
 .smart {        
@@ -138,6 +146,31 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+  }
+  &__burgermenu {
+    border: 2px solid white;
+    //display: flex;
+    display: none;
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 10px;
+    width: 55px;
+    height: 55px;
+    .xs-block({
+      display: flex;
+    });
+  }
+  &__burgerline1 {
+    .mixinburgerline();
+  }
+  &__burgerline2 {
+    .mixinburgerline();
+  }
+  &__burgerline3 {
+    .mixinburgerline();
   }
   &__menu {
     //border: @border;
@@ -657,6 +690,8 @@
     display: flex;
     justify-content: center;
   }
+  
+  
   &__cardsbitcoin {
     .mixincards();
     //border: @border;
@@ -690,6 +725,7 @@
   &__cardsbitcoinvolume {
     .mixincardsvolume();
   }
+
 
 
   &__cardsethereum {
