--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,11 @@
 {{!-- SECTION SMART START --}}
 <section class="smart">
   <div class="smart__wrapper">
-    
+    <div class="smart__burgermenu">
+      <div class="smart__burgerline1"></div>
+      <div class="smart__burgerline2"></div>
+      <div class="smart__burgerline3"></div>
+    </div>
     <div class="smart__menu">
       <div class="smart__logoblock">
         <a href="/"><img src="/pict/logo.png" alt="logo"></a>
@@ -56,6 +60,9 @@
 {{!-- ----------------- --}}
 
 {{!-- SECTION CCP START --}}
+
+
+{{!-- 
 <section class="ccp">
   <div class="ccp__wrapper">
     
@@ -198,4 +205,6 @@
     </div>
   </div>
 </section>
+ --}}
+
 {{!-- SECTION CCP END --}}
