--- a/public/css/style.css
+++ b/public/css/style.css
@@ -209,8 +209,8 @@ img {
 .mixinburgerline {
   border: 2px solid white;
   align-self: center;
-  margin: 5px 0;
-  width: 80%;
+  margin: 4px 0;
+  width: 70%;
 }
 .smart {
   display: flex;
@@ -228,13 +228,14 @@ img {
   border: 2px solid white;
   display: none;
   position: fixed;
-  top: 20px;
+  top: 30px;
   left: 20px;
   flex-direction: column;
   justify-content: center;
   border-radius: 10px;
-  width: 55px;
-  height: 55px;
+  width: 50px;
+  height: 50px;
+  z-index: 10;
 }
 @media screen and (max-width: 480px) {
   .smart__burgermenu {
@@ -244,20 +245,39 @@ img {
 .smart__burgerline1 {
   border: 2px solid white;
   align-self: center;
-  margin: 5px 0;
-  width: 80%;
+  margin: 4px 0;
+  width: 70%;
+  transition: ease-in-out 0.5s;
 }
 .smart__burgerline2 {
   border: 2px solid white;
   align-self: center;
-  margin: 5px 0;
-  width: 80%;
+  margin: 4px 0;
+  width: 70%;
+  transition: ease-in-out 0.5s;
 }
 .smart__burgerline3 {
   border: 2px solid white;
   align-self: center;
-  margin: 5px 0;
-  width: 80%;
+  margin: 4px 0;
+  width: 70%;
+  transition: ease-in-out 0.5s;
+}
+.smart__burgerlineonerotate {
+  transform: rotate(45deg);
+  position: relative;
+  top: 6px;
+  transition: ease-in-out 0.5s;
+}
+.smart__burgerlinetworotate {
+  display: none;
+  transition: ease-in-out 0.5s;
+}
+.smart__burgerlinethreerotate {
+  transform: rotate(-45deg);
+  position: relative;
+  top: -6px;
+  transition: ease-in-out 0.5s;
 }
 .smart__menu {
   display: flex;
