--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,6 +21,16 @@
           <li><a href="#">Contacts</a></li>
         </ul>
       </div>
+      <div class="smart__menublockfloat">
+        <ul class="smart__listfloat">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">RoadMap</a></li>
+          <li><a href="#">Contacts</a></li>
+        </ul>
+      </div>
       <div class="smart__regblock">
         <button class="smart__btnlogin">Log In</button>
         <button class="smart__btnregistr"><i class="fa fa-user-circle" aria-hidden="true"></i>Register</button>
@@ -60,7 +70,6 @@
 {{!-- ----------------- --}}
 
 {{!-- SECTION CCP START --}}
-
 
 
 <section class="ccp">
