--- a/src/less/style.less
+++ b/src/less/style.less
@@ -346,6 +346,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     .xs-block({
       //border: @border;
+      display: none;
       border-radius: 10px;      
       justify-content: center;
       position: fixed;      
