--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,5 +12,8 @@
   {{{body}}}
 
 <script src="/js/burger.js"></script>  
+<script src="/js/bitcoinchart.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
+
 </body>
 </html>
