--- a/views/index.hbs
+++ b/views/index.hbs
@@ -98,7 +98,7 @@
             <span>-1.04%</span>
           </div>
           <div class="ccp__cardsbitcoingrapf">
-
+            <canvas id="bitcoinchart"></canvas>
           </div>
           <div class="ccp__cardsbitcointimestapm">
             <button>Hour</button>
