--- a/src/less/style.less
+++ b/src/less/style.less
@@ -7,7 +7,7 @@
 
 // MIXINS BLOCK START
 .mixincards {
-  border: @border;
+  //border: @border;
   border-radius: 5px;
   height: 350px;
   width: 270px;
@@ -15,7 +15,7 @@
 }
 
 .mixincardslogos {
-  border: @border;
+  //border: @border;
   display: flex;
   flex-direction: column-reverse;    
   align-items: center;
@@ -32,7 +32,7 @@
 }
 
 .mixincardsinfo {
-  border: @border;
+  //border: @border;
   display: flex;    
   flex-direction: column;        
   align-items: center;
@@ -41,7 +41,7 @@
 }
 
 .mixincardsprice {
-  border: @border;
+  //border: @border;
   display: flex;
   justify-content: space-between;        
   height: 20px;
@@ -53,7 +53,7 @@
 }
 
 .mixincardsgain {
-  border: @border;
+  //border: @border;
   display: flex;
   justify-content: space-between;            
   align-items: center;
@@ -70,7 +70,7 @@
 }
 
 .mixincardsgraph {
-  border: @border;
+  //border: @border;
   height: 90px;
   width: 80%;
 }
@@ -98,7 +98,7 @@
 }
 
 .mixincardsfooter {
-  border: @border;
+  //border: @border;
   display: flex;
   justify-content: center;
   background-color: @colordarkblue;    
@@ -108,7 +108,7 @@
 }
 
 .mixincardsvolume {
-  border: @border;
+  //border: @border;
   display: flex;
   justify-content: space-between;        
   align-items: center;
