--- a/views/index.hbs
+++ b/views/index.hbs
@@ -130,7 +130,7 @@
             <span>+0.98%</span>
           </div>
           <div class="ccp__cardsethereumgrapf">
-
+            <canvas id="ethereumchart"></canvas>
           </div>
           <div class="ccp__cardsethereumtimestapm">
             <button>Hour</button>
@@ -162,7 +162,7 @@
             <span>+18.37%</span>
           </div>
           <div class="ccp__cardsripplegrapf">
-
+            <canvas id="ripplechart"></canvas>
           </div>
           <div class="ccp__cardsrippletimestapm">
             <button>Hour</button>
@@ -193,7 +193,7 @@
             <span>+9.38%</span>
           </div>
           <div class="ccp__cardscardanograpf">
-
+            <canvas id="cardanochart"></canvas>
           </div>
           <div class="ccp__cardscardanotimestapm">
             <button>Hour</button>
